syntax = "proto3";

package tachiyomi_categories;
option go_package = "github.com/croisen/chiyo-tatsu/proto_files_go/backup_category";

message BackupCategory {
    string name = 1;
    int32 order = 2;
    //int32 updateInterval = 3;

    int32 flags = 100;
}
