syntax = "proto3";

import 'backup_chapter.proto';
import 'backup_history.proto';
import 'backup_tracking.proto';
import 'manga_update_strategy.proto';

message BackupManga {
  int64 source = 1;
  string url = 2;
  string title = 3;
  string artist = 4;
  string author = 5;
  string description = 6;
  repeated string genre = 7;
  int32 status = 8;
  string thumbnailUrl = 9;
  string customCover = 10;
  int64 lastUpdate = 11;
  int64 lastInit = 12;
  int64 dateAdded = 13;
  int32 viewer = 14;
  int32 flags = 15;
  repeated BackupChapter chapters = 16;
  repeated int64 categories = 17;
  repeated BackupTracking tracking = 18;

  bool favorite = 100;
  int32 chapterFlags = 101;
  repeated BrokenBackupHistory brokenHistory = 102;
  int32 viewer_flags = 103;
  repeated BackupHistory history = 104;
  UpdateStrategy updateStrategy = 105;
}
