syntax = "proto3";

import 'backup_category.proto';
import 'backup_manga.proto';
import 'backup_preference.proto';
import 'backup_source.proto';

message Backup {
    repeated BackupManga mangaBackup = 1;
    repeated BackupCategory categories = 2;

    repeated BrokenBackupSource brokenSources = 100;
    repeated BackupSource sources = 101;
    repeated BackupPreference preferences = 104;
    repeated BackupSourcePreferences sourcePreferences = 105;
}
